--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,12 @@
 gitpython>=3.1.30
 matplotlib>=3.3
 numpy>=1.23.5
+
 opencv-python-headless
+torch==1.8.1
+torchvision==0.9.1
+torchaudio==0.8.1
+
 
 Pillow>=9.4.0
 psutil  # system resources
@@ -13,8 +18,7 @@ PyYAML>=5.3.1
 requests>=2.23.0
 scipy>=1.4.1
 thop>=0.1.1  # FLOPs computation
-torch>=1.8.0  # see https://pytorch.org/get-started/locally (recommended)
-torchvision>=0.9.0
+
 tqdm>=4.64.0
 ultralytics>=8.0.232
 # protobuf<=3.20.1  # https://github.com/ultralytics/yolov5/issues/8012
