--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,8 @@ matplotlib>=3.3
 numpy>=1.23.5
 
 opencv-python-headless
-torch==1.8.1
-torchvision==0.9.1
+torch==1.8.1+cpu
+torchvision==0.9.1+cpu
 torchaudio==0.8.1
 
 
